# roughly

./: Dockerfile  README.md  ecosystem.json  main.py  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
roughly/: __init__.py  cli.py  client.py  ecosystem.py  errors.py  models.py  server.py  shared.py  tags.py
tests/: packets.json  test_batching.py  test_cli.py  test_end_to_end.py  test_grease.py  test_replay.py  test_spec_compliance.py
